--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
 
-    <div id="container"></div>
-    <!-- <button id="box"> OPEN THE BOX !</button> -->
-    <!-- <button id="box"> OPEN THE BOX !</button> -->
+    <!-- <div id="container"></div> -->
+    <p id="welcome-el"></p>
 
     <script src="/styles/main.js"></script>
   </body>
