--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
     <input type="text" id="input-el" />
     <button id="input-btn">SAVE INPUT</button>
+    <button id="tab-btn">SAVE TAB</button>
     <button id="delete-btn">DELETE ALL</button>
-    <ul id="ul-el"></ul>
+    <ul id="ul-el">
+    </ul>
 
     <!-- <div id="container"></div> -->
-    <p id="welcome-el"></p>
+    <!-- <p id="welcome-el"></p> -->
 
     <script src="/styles/main.js"></script>
   </body>
